--- a/src/static/cry.css
+++ b/src/static/cry.css
@@ -1,3 +1,14 @@
 .cry_full_width {
     width:100%
 }
+.cry_image_container {
+    display: flex;
+    background-color: #1cbbb4;
+    flex-direction: column;
+    align-items: center;
+}
+
+.cry_image {
+    width: 100%;
+    flex-shrink: 1;
+}
